# markdown-preview-locally

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.specs/features/markdown-preview/: design.md  spec.md  tasks.md
.specs/features/mermaid-rendering/: spec.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
assets/: app.js
src/: assets.rs  cli.rs  main.rs  renderer.rs  scanner.rs  server.rs  watcher.rs
test-docs/: README.md  code-examples.md
test-docs/docs/: api.md  setup.md
tests/: js_links.rs  links.js
