[package]
name = "mdpreview"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mdpreview"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
comrak = { version = "0.39", features = ["syntect"] }
syntect = "5"
notify = "7"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
webbrowser = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
